--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Two Geniuses And A Clumsy # Website name
-baseURL: 'https://two-geniuses-and-a-clumsy.com/' # Website URL
+baseURL: 'https://two-geniuses-and-a-clumsy.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
